[metadata]
name = netforce
version = 0.1.0
summary = Neforce
description-file =
    README.md
author = C3
author-email = 'DL-eBay-C3-Dev@corp.ebay.com'
home-page = https://github.scm.corp.ebay.com/C3/netforce
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
[files]
packages =
    netforce
    napalm_baseebay
    napalm_ebayeos
    napalm_ebayjunos
    napalm_ebaynxos
data_files =

[entry_points]
console_scripts =
    netforce-db-manage = netforce.db.migration.cli:main
    netforce-server = neutron.server:main
neutron.core_plugins =
    netforce = netforce.plugins.plugin:NetforcePlugin
